# jaffle-shop

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .sqlfluffignore  README.md  Taskfile.yml  dbt_project.yml  dependencies.yml  hk.pkl  mise.toml  package-lock.yml  prek.toml  profiles.yml  pyproject.toml  requirements.in  requirements.txt  taskfile.yaml
jaffle-data/: properties.yml
models/marts/: customers.yml  order_items.yml  orders.sql  orders.yml
models/staging/: __sources.yml  stg_customers.sql  stg_locations.sql  stg_locations.yml  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_supplies.sql
