# vim: set ft=toml :


[project]
name = 'jaffle-shop'


[tool.pixi.workspace]
channels = ['conda-forge']
platforms = [
  'linux-64',
  'linux-aarch64',
  'osx-arm64',
]

[tool.pixi.dependencies]
python = { version = '>=3.13,<3.14' }  # https://github.com/dbt-labs/dbt-core/issues/12098

[tool.pixi.pypi-dependencies]
dbt-core = { version = '>=1.10,<1.11' }
dbt-duckdb = { version = '*' }
dbt-metricflow = { version = '*' }
dbt-semantic-interfaces = { version = '>=0.9.4.dev0' }
jafgen = { version = '*' }

[tool.pixi.environments]
default = { solve-group = 'default' }
lint = { features = ['lint'], solve-group = 'default' }

[tool.pixi.feature.lint.pypi-dependencies]
ruff = { version = '*' }
sqlfluff = { version = '*', extras = ['rs'] }
sqlfluff-templater-dbt = { version = '*' }


[tool.ruff]
line-length = 100
target-version = 'py314'

[tool.ruff.format]
preview = true

[tool.ruff.lint]
future-annotations = true
ignore = [
  'ANN',      # mypy handles our type annotations
  'COM812',   # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'COM819',   # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'CPY',      # not publishing publicly
  'D1',       # docstrings are optional
  'E111',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'E114',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'E117',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'ERA',      # do not remove commented-out code
  'ISC001',   # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'ISC002',   # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'Q000',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'Q001',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'Q002',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'Q003',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'W191',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
]
select = ['ALL']

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = []
known-local-folder = []
known-third-party = []

[tool.ruff.lint.per-file-ignores]
'test/**/*.py' = [
  'INP001',
]
'__init__.py' = [
  'F401',
]

[tool.ruff.lint.pydocstyle]
convention = 'pep257'


[tool.sqlfluff.core]
dialect = 'duckdb'
encoding = 'utf-8'
exclude_rules = [
  'ST06',
]
large_file_skip_byte_limit = 0
max_line_length = 100
sql_file_exts = '.sql'
templater = 'dbt'

[tool.sqlfluff.indentation]
tab_space_size = 4

[tool.sqlfluff.layout.type.comma]
line_position = 'trailing'
spacing_before = 'touch'

[tool.sqlfluff.rules.aliasing.column]
aliasing = 'explicit'

[tool.sqlfluff.rules.aliasing.expression]
allow_scalar = false

[tool.sqlfluff.rules.aliasing.length]
min_alias_length = 1

[tool.sqlfluff.rules.aliasing.table]
aliasing = 'explicit'

[tool.sqlfluff.rules.ambiguous.column_references]
group_by_and_order_by_style = 'implicit'

[tool.sqlfluff.rules.capitalisation.functions]
capitalisation_policy = 'lower'

[tool.sqlfluff.rules.capitalisation.identifiers]
extended_capitalisation_policy = 'lower'

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = 'lower'

[tool.sqlfluff.rules.capitalisation.literals]
capitalisation_policy = 'lower'

[tool.sqlfluff.rules.layout.newlines]
maximum_empty_lines_inside_statements = 3

[tool.sqlfluff.templater.dbt]
profiles_dir = '.'
